# uniffi-swift-helper

./: Cargo.toml
src/: apple_platform.rs  build.rs  cli.rs  lib.rs  main.rs  project.rs  spm.rs  utils.rs  xcframework.rs
templates/: Package.swift  binding-prefix.swift  module.modulemap
