[package]
name = "uniffi-swift-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.19"
clap = { version = "4.5", features = ["derive"] }
pathdiff = "0.2"
rinja = "0.3"
serde_json = "1.0"
tempfile = "3.14"
toml = { version = "0.8", features = ["parse"] }
uniffi = "0.28"
uniffi_bindgen = "0.28"
